# chartkick.py

./: CHANGELOG.md  LICENSE.txt  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
chartkick/django/: __init__.py
chartkick/flask/: __init__.py
tests/: test_django.py  test_flask.py
