[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "chartkick"
version = "1.0.1"
description = "Create beautiful JavaScript charts with one line of Python"
readme = "README.md"
authors = [
    {name = "Andrew Kane", email = "andrew@ankane.org"}
]
license = {text = "MIT"}
requires-python = ">= 3.7"

[project.urls]
Homepage = "https://github.com/ankane/chartkick.py"

[tool.setuptools.package-data]
chartkick = ["licenses/*", "django/static/chartkick/*"]
